[gd_scene load_steps=3 format=3 uid="uid://cqykai0fkxblq"]

[ext_resource type="FontFile" uid="uid://y2fv3f1jprtd" path="res://assets/fonts/bb.ttf" id="1_4x3ge"]
[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_x3mcw"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_x3mcw")

[node name="start_button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 831.0
offset_top = 672.0
offset_right = 1048.0
offset_bottom = 739.0
theme_override_fonts/font = ExtResource("1_4x3ge")
theme_override_font_sizes/font_size = 50
text = "START GAME"

[node name="resume_button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 831.0
offset_top = 672.0
offset_right = 1066.0
offset_bottom = 739.0
theme_override_fonts/font = ExtResource("1_4x3ge")
theme_override_font_sizes/font_size = 50
text = "RESUME GAME"

[node name="settings_button" type="Button" parent="."]
layout_mode = 0
offset_left = 849.0
offset_top = 757.0
offset_right = 1021.0
offset_bottom = 824.0
focus_mode = 0
theme_override_fonts/font = ExtResource("1_4x3ge")
theme_override_font_sizes/font_size = 50
text = "SETTINGS"

[node name="quit_button" type="Button" parent="."]
layout_mode = 0
offset_left = 895.0
offset_top = 841.0
offset_right = 980.0
offset_bottom = 908.0
focus_mode = 0
theme_override_fonts/font = ExtResource("1_4x3ge")
theme_override_font_sizes/font_size = 50
text = "QUIT"

[node name="title_label" type="Label" parent="."]
layout_mode = 0
offset_left = 706.0
offset_top = 88.0
offset_right = 1170.0
offset_bottom = 665.0
theme_override_colors/font_color = Color(0.666667, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_4x3ge")
theme_override_font_sizes/font_size = 120
text = "PADDLES
BALLS
BLOCKS 
and WALLS!"
horizontal_alignment = 1

[node name="version_label" type="Label" parent="."]
layout_mode = 0
offset_left = 1201.0
offset_top = 571.0
offset_right = 1325.0
offset_bottom = 599.0
theme_override_colors/font_color = Color(0.581033, 0.581033, 0.581033, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Version 0.0.0"

[node name="platform_label" type="Label" parent="."]
layout_mode = 0
offset_left = 1202.0
offset_top = 602.0
offset_right = 1372.0
offset_bottom = 630.0
theme_override_colors/font_color = Color(0.581033, 0.581033, 0.581033, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Platform Desktop"

[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
